new pages and more

--- a/chisono.html
+++ b/chisono.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>beigemike.com | Chi sono</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <h1>porcobea</h1>
     </head>
@@ -15,8 +15,8 @@
                 <div class="menu">
                     <a href="#">Chi sono</a>
                     <a href="screen.html">Screenshots</a>
-                    <a href="https://www.youtube.com/channel/UCEHsmS3BAVy5-Ee6pi7Il3Q">Seguimi</a>
-                    <a href="more.html">Di più</a>
+                    <a href="https://www.youtube.com/channel/UCEHsmS3BAVy5-Ee6pi7Il3Q">YouTube</a>
+                    <a href="servizi.html">Hosting</a>
                     <div class="logobox">    
                         <a href="index.html" class="logo"></a>
                     </div>
@@ -33,5 +33,6 @@
                                     con il mondo Linux. Imparai ad usare il prompt dei comandi e ad installare i primi programmi. Come ogni bambino di 10 anni che si rispetti, il primo gioco che installai fu Minecraft Java, naturalmente craccato. Oltre a questa scemenza (e Minecraft laggava senza ritegno) provai anche ad usare Wine per far girare programmi Windows su Ubuntu e per provare installai Microsoft Office 2007.
                                     Tutto questo per dirvi che anche Ubuntu non che girasse una meraviglia, ma mi accontentavo.<br/><br/><span style="font-weight: bold; font-size: 21px">SI FA UN PIZZICO SUL SERIO...</span><br/>Perciò mio papà nel 2017 mi regalò un <a href="https://edogamer06.weebly.com/raspberry-pi3-un-mini-pc.html">Raspberry Pi 3</a> (al tempo l'ultimo modello, oggi c'è il Pi 4) per poter "smanettare" su un hardware più decente e su un OS più rapido. Minecraft era preinstallato, ma con una versione molto vecchia, perchè ovviamente il Raspberry non è adatto per il gaming. Ma riguardo la navigazione web era fantastico: era rapido nel caricare il browser (Chromium) e
                                     anche su YouTube o piattaforme di streaming video era molto buono consentendomi di guardare video in alta definizione senza problemi. Avevo fatto il salto di qualità ma rimanevo comunque in ambiente Linux.<br/><br/>Nell'estate 2019 invece con un nuovo PC fisso riesco a mettere mano per la prima volta a Windows 10 (intendo in maniera fluida e non-laggosa). Ai tempi di certo non capivo ancora molto di hardware, anzi, forse una cosa che sapevo bene e che i processori Exynos scaldano tanto da poter essere usati per far bollire l'acqua della pasta, ma delle componenti usate nel preassemblato che avevamo comprato non ne sapevo nulla. Invece ad oggi posso dirvi che quel computer ha un AMD Ryzen 5 1400U. Vi dice niente? Cacchio, permettetemi un attimo di dire una cosa:
-                                    già sui preassemblati ci sparano un sacco di bloatware e giochi inutili, poi ci mettete come processore un AMD R5 di prima generazione... scandaloso. Finchè non mi misi a rimuovere ogni programma in avvio automatico e a rimuovere ogni briciola di bloatware quel PC sarebbe stato da pattumiera. Sempre meglio dell'Acer del 2009 però. <br/><br/> <span style="font-weight: bold; font-size: 21px;">DOPODICHÈ...</span><br/></div>
+                                    già sui preassemblati ci sparano un sacco di bloatware e giochi inutili, poi ci mettete come processore un AMD R5 di prima generazione... scandaloso. Finchè non mi misi a rimuovere ogni programma in avvio automatico e a rimuovere ogni briciola di bloatware quel PC sarebbe stato da pattumiera. Sempre meglio dell'Acer del 2009 però. <br/><br/> <span style="font-weight: bold; font-size: 21px;">DOPODICHÈ...</span><br/>Dopo anni di scleri con computer che non vogliono collaborare, arrivò il 2020, anno in cui un PC serio mi sarebbe servito! Ma per averlo avrei dovuto aspettare fine 2021, dove acquistai un portatile abbastanza potente da non dover condividere con nessuno su cui lavorare o giocare (su qualche gioco con qualche compromesso in qualità grafica).
+                                    Ora, per smettere di parlare di scemenze e quant'altro, devo ammettere che tutto questo, a partire dal vecchio portatile recuperato con Ubuntu, mi è servito. Ho fatto conoscenza con Linux, a smanettare con il Raspberry (che ad oggi funge da Home Server), a conoscere il mondo hardware e solo ultimamente con il nuovo portatile sto conoscendo Windows in tutto e per tutto.</div>
             </div>
