added more things

--- a/servizi.html
+++ b/servizi.html
@@ -27,8 +27,19 @@
         
         <div class="titolopag3">HOSTING</div>
         <div class="opzioni" style="align-items: center">
-            <div class="opzione1" style="color: gray;"><span style="font-weight: bold; font-size: 22px; color: #0098ff;">HOST BOT DISCORD 24/7</span><br><span style="font-size: 18px; color: #007bce;">SERVER CONDIVISO</span><br><br>- Funzionamento semplice<br>- Invii il codice e il tuo bot verrà messo online!<br><br><span style="color: #003554; font-weight: bold;">A partire da 2€ al mese!</span>   </div>
-            <div class="button">
-                <button class="button-32" role="button">Per saperne di più</button>
-            </div> 
+            <div class="opzione1" style="color: gray;"><span style="font-weight: bold; font-size: 22px; color: #0098ff;">HOST BOT DISCORD 24/7</span><br><span style="font-size: 18px; color: #007bce;">SERVER CONDIVISO</span><br><br>- Funzionamento semplice<br>- Invii il codice e il tuo bot verrà messo online!<br><br><span style="color: #003554; font-weight: bold;">A partire da 2€/mese</span>   
+                <div class="button">
+                    <a href="https://ovh.com">
+                       <button class="button-32" role="button">Per saperne di più</button>
+                    </a>
+                </div>
+            </div>
+           <div class="opzione2" style="color:gray"><span style="font-weight: bold; font-size: 22px; color: #0098ff;">HOST SITO WEB</span><br><span style="font-size: 18px; color: #007bce;">VPS</span><br><br>- Server dedicato ideale per piccoli siti web<br>- Compatibile con WordPress<br><br><span style="color: #003554; font-weight: bold;">A partire da 5€/mese</span>
+            <div class="button2">
+                <a href="https://ovh.com">
+                   <button class="button-34" role="button">Per saperne di più</button>
+                </a>
+            </div>
+           </div> 
         </div>
+        
