--- a/chisono.html
+++ b/chisono.html
@@ -16,7 +16,7 @@
                     <a href="#">Chi sono</a>
                     <a href="screen.html">Screenshots</a>
                     <a href="https://www.youtube.com/channel/UCEHsmS3BAVy5-Ee6pi7Il3Q">YouTube</a>
-                    <a href="servizi.html">Hosting</a>
+                    <a href="hosting.html">Hosting</a>
                     <div class="logobox">    
                         <a href="index.html" class="logo"></a>
                     </div>
